--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -14,23 +14,24 @@
       <a class="navbar-brand" href="#Random">Random</a>
     </nav> -->
 
-    <div id="top" class="row tall gray">
-        <figure class="masthead">
-          <img src="img/codecode.jpg" alt="" height="">
-<!--              <img src="https://thumbor.forbes.com/thumbor/960x0/https%3A%2F%2Fblogs-images.forbes.com%2Fantonyleather%2Ffiles%2F2017%2F12%2FP2760247-20-2-1200x675.jpg" alt="" height="">-->
-        </figure>   
-     <div class="header-content">
-           <h1>
-                Krystian Szorc<br/>
-              </h1>
-              <h1>
-              .Software__Engineer { <br/>
-<!--                &emsp; display: absolute;<br/>-->
-                }
-              </h1>
+    <div id="" class="home-body">
+      <figure class="masthead">
+        <img src="img/codecode.jpg" alt="">            
+      </figure>   
+      <div class="header-content">
+        <h1>
+          Hello, I'm <strong>Krystian Szorc</strong>
+        </h1>
+        <h1>
+          I'm a full-stack developer.
+        </h1>
+          <!-- <h1>
+          .Software__Engineer { <br/>
+            &emsp; display: absolute;<br/>
+            }
+          </h1> -->
       </div> 
-          
-      </div>
+    </div>
 
  
     <div class="container">
