--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <html>
   <head>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script type="text/javascript" src="path/to/pts.js"></script>
     <script src="main.js"></script>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   </head>
-  <body >
-    <!-- <nav class="navbar navbar-expand-xl navbar-dark bg-dark">
+  <body>
+    <nav class="">
       <a class="navbar-brand" href="#top">Home</a>
       <a class="navbar-brand" href="#About">About</a>
-      <a class="navbar-brand" href="#Experience">Experience</a>
-      <a class="navbar-brand" href="#School">School</a>
-      <a class="navbar-brand" href="#Random">Random</a>
-    </nav> -->
+      <a class="navbar-brand" href="#Portfolio">Portfolio</a>
+      <a class="navbar-brand" href="#Contact">Contact</a>
+    </nav>
 
     <div id="" class="home-body">
       <figure class="masthead">
         <img src="img/codecode.jpg" alt="">            
+        <!-- <canvas id="canvas" width="714" height="1734" style="width: 357px; height: 867px;"></canvas> -->
       </figure>   
       <div class="header-content">
         <h1>
@@ -25,17 +26,14 @@
         <h1>
           I'm a full-stack developer.
         </h1>
-          <!-- <h1>
-          .Software__Engineer { <br/>
-            &emsp; display: absolute;<br/>
-            }
-          </h1> -->
       </div> 
     </div>
+    <div>
 
+    </div>
  
     <div class="container">
-      <div id="About" class="row tall orange">
+      <div id="About" class="row tall">
         <div class="col-6 content-center ">
             <h1>About.</h1>
         </div>
@@ -46,6 +44,61 @@
       </div>
     </div>
 
+    <div class="container">
+        <div id="Portfolio" class="row tall">
+          <div class="section-header">Portfolio</div>
+          <div class="portfolio-display">
+            <ul>
+              <li>
+                <figure>
+                    <!-- <img src="img/hyatt-home.png"> -->
+                    <img src="img/WorldOfHyattLoyaltyProgram.png">
+                </figure>
+                <div class="portfolio-short">
+                    Hyatt<br/>
+                    VueJS and Java with AEM
+                </div>
+              </li>
+              <li>
+                <figure>
+                    <img src="img/levinson-home.jpg">
+                </figure>
+                Levinson
+              </li>
+              <li>
+                <figure>
+                    <img src="img/shipbob-home.jpg">
+                </figure>
+                Shipbob
+              </li>
+              <li>
+                <figure>
+                    <img src="img/shipbob-home.jpg">
+                </figure>
+                Geneca
+              </li>
+              <li>
+                <figure>
+                    <img src="img/shipbob-home.jpg">
+                </figure>
+                xCelor/CMT
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div id="Contact" class="row tall">
+          <div class="">
+              <h1>Contact</h1>
+          </div>
+          <div class="">
+            Like what you see? Let's get in touch!
+          </div>
+  
+        </div>
+      </div>
   </body>
 </html>
 
