--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               </li>
               <li>
                 <figure>
-                    <img src="img/shipbob-home.jpg">
+                    <img src="img/cmt-home.png">
                 </figure>
                 xCelor/CMT
               </li>
