--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 
       <div class="container">
         <div id="Contact" class="row contact-tall">
-          <div class="section-header">Contacts</div>
+          <div class="section-header">Contact</div>
           <div class="content-contact content-center">
               <form class="">
-                  <input placeholder="Name" type="text" required/>
-                  <input placeholder="Enter Email" type="text" required/>
-                  <textarea placeholder="Your Message" type="text"></textarea>
-      
+                  <input class="form-control" placeholder="Name" type="text" required/>
+                  <input class="form-control" placeholder="Enter Email" type="text" required/>
+                  <textarea class="form-control" placeholder="Your Message" type="text" required></textarea>
+                  <button class="btn btn-primary">Submit</button>
                 </form>
           </div>
 
