--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
         <div id="Contact" class="row contact-tall">
           <div class="section-header">Contact</div>
           <div class="content-contact content-center">
-              <form class="">
-                  <input class="form-control" placeholder="Name" type="text" required/>
-                  <input class="form-control" placeholder="Enter Email" type="text" required/>
-                  <textarea class="form-control" placeholder="Your Message" type="text" required></textarea>
-                  <button class="btn btn-primary">Submit</button>
-                </form>
+            <form class="">
+              <input class="form-control" placeholder="Name" type="text" required/>
+              <input class="form-control" placeholder="Enter Email" type="email" required/>
+              <input class="form-control" placeholder="Subject" type="text" required/>
+              <textarea class="form-control" placeholder="Your Message" type="text" required></textarea>
+              <button class="btn btn-primary">Submit</button>
+            </form>
           </div>
 
         </div>
@@ -123,17 +124,3 @@
 
   </body>
 </html>
-
-
-<!--
-          <div class="typewriter">
-              <h1>
-                Krystian Szorc<br/>
-              </h1>
-              <h1>
-              .Software__Engineer { <br/>
-                &emsp; display: absolute;<br/>
-                }
-              </h1>
-                
-          </div>-->
