--- a/index.html
+++ b/index.html
@@ -115,9 +115,7 @@
     <!-- Modal content -->
     <div class="modal-content">
       <span id="close">&times;</span>
-      <p>Some text in the Modal..</p>
-      <p>Some text in the Modal..</p>
-      <p>Some text in the Modal..</p>
+      <p>Worked on the World of Hyatt team to help their web app achieve new visuals and design </p>
     </div>
   </div>
 
