--- a/index.html
+++ b/index.html
@@ -127,12 +127,15 @@
                 Contact
             </h2>
           </div>
+          <div>
+            Like what you see or have a question?
+          </div>
           <div class="content-contact content-center">
               <form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/kjszorc@yahoo.com" method="post">
                 <fieldset id="fs-frm-inputs">
                   <input type="text" name="name" id="full-name" placeholder="Name" required="">
                   <input type="email" name="_replyto" id="email-address" placeholder="Email" required="">
-                  <textarea rows="5" name="message" id="message" placeholder="Your message" required=""></textarea>
+                  <textarea rows="6" name="message" id="message" placeholder="Your message" required=""></textarea>
                   <input type="hidden" name="_subject" id="email-subject" value="Contact Form Submission">
                 </fieldset>
                 <input class="btn" type="submit" value="Submit">
@@ -157,13 +160,14 @@
       <div class="tag">
         VueJS and Java with AEM
       </div>
-      <p class="description">Worked on the World of Hyatt team to help their web app 
+      <p class="description">Currently working on the World of Hyatt team to help their web app 
         achieve new visuals and design. Re-designed the My Account page to provide 
-        a leaner page while adding functionality.
+        a leaner page while adding functionality like point conversions for miles with American Airlines and a brand explorer view to receive 
+        free nights for staying with different brands.
       </p>
 
       <div class="row">
-        <a class="btn" href="https://www.google.com">
+        <a class="btn" href="https://world.hyatt.com">
           Visit Site
         </a>
         <span id="close" class="close">&times;</span>
@@ -177,7 +181,7 @@
   <div class="row py-2 px-3">
     <!-- Copyright -->
     <div class="footer-copyright col-xl-6"> 2019 Copyright:
-      <a href="https://mdbootstrap.com/education/bootstrap/"> Krystian Szorc</a>
+      <a href="https://www.krystianszorc.com"> Krystian Szorc</a>
     </div>
     <!-- Copyright -->
     <div class="col-xl-6">
