--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
     <div class="col-xl-6">
       <ul class="social">
           <li class="social-icons">
-              <a class="nav-link p-2" href="https://github.com/twbs/bootstrap" target="_blank" rel="noopener" aria-label="GitHub">
+              <a class="nav-link p-2" href="www.linkedin.com/in/krystian-szorc" target="_blank" rel="noopener" aria-label="linkedin">
                 <i class="fa fa-linkedin-square" style="font-size:36px"></i>
               </a>
           </li>
@@ -209,7 +209,7 @@
             </a>
         </li>
         <li class="social-icons">
-            <a class="nav-link p-2" href="#" target="_blank" rel="noopener" aria-label="GitHub">
+            <a class="nav-link p-2" href="#" target="_blank" rel="noopener" aria-label="Stack Overflow">
               <i class="fa fa-stack-overflow" style="font-size:36px"></i>
             </a>
         </li>
