--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Krystian's Portfolio</title>
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.js"></script> -->
     <!-- <script type="text/javascript" src="path/to/pts.js"></script> -->
     <script src="main.js"></script>
-    <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="public/main.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
+    <!-- <link rel="stylesheet" src="libraries/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!-- <link rel="stylesheet" href="font-awesome.min.css"> -->
   </head>
   <body>
     <nav class="">
@@ -34,15 +39,15 @@
     <div class="section">
       <div id="About" class="container about-tall">
           <div class="section-header">
-              <h2 class="waypoint section-title">
-                About
-              </h2>
-            </div>
+            <h2 class="waypoint section-title">
+              About
+            </h2>
+          </div>
         <div class="content-about content-center row">
-          <figure class="col-xl-6">
-            <img src="img/shipbob-home.jpg">
+          <figure class="col-lg-6">
+            <img src="img/krystian_portrait.jpg">
           </figure>
-          <div class="col-xl-6">
+          <div class="col-lg-6">
               <p>
                 Test
               </p>
