nav bar mobile minor update (needs word)

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
   </head>
   <body>
     <nav class="">
+      <div class=" navbar--mobile">
+        <i class="navbar-brand fa fa-bars" data-js="navbar-mobile"></i>
+      </div>
       <div class="navbar-brand navbar--desktop" data-js="navbar-desktop" dest="Home">Home</div>
       <div class="navbar-brand navbar--desktop" data-js="navbar-desktop" dest="About">About</div>
       <div class="navbar-brand navbar--desktop" data-js="navbar-desktop" dest="Portfolio">Portfolio</div>
       <div class="navbar-brand navbar--desktop" data-js="navbar-desktop" dest="Contact">Contact</div>
-      <div class="navbar-brand navbar--mobile"><i class="fa fa-bars"></i></div>
     </nav>
 
     <div id="Home" class="home-body">
@@ -214,7 +216,7 @@
 <footer class="page-footer font-small blue">
   <div class="row py-2 px-3">
     <!-- Copyright -->
-    <div class="footer-copyright col-6">© 2019
+    <div class="footer-copyright col-6"><i class="fa fa-copyright"></i> 2019
       <a href="https://www.krystianszorc.com"> Krystian Szorc</a>
     </div>
     <!-- Copyright -->
