--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <!-- <script type="text/javascript" src="path/to/pts.js"></script> -->
-    <script src="main.js"></script>
+    <script src="libraries/pts.min.js"></script>
+    <script src="public/main.js"></script>
+    <script src="public/canvas.js"></script>
+
     <link rel="stylesheet" href="public/main.css">
-    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="libraries/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
     <!-- <link rel="stylesheet" src="libraries/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -15,7 +18,7 @@
   </head>
   <body>
     <nav class="">
-      <div class=" navbar--mobile">
+      <div class="navbar--mobile">
         <i class="navbar-brand fa fa-bars" data-js="navbar-mobile"></i>
       </div>
       <div class="navbar-brand navbar--desktop" data-js="navbar-desktop" dest="Home">Home</div>
