change file structure, begin canvas work

--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <!-- <script type="text/javascript" src="path/to/pts.js"></script> -->
-    <script src="libraries/pts.min.js"></script>
-    <script src="public/main.js"></script>
-    <script src="public/canvas.js"></script>
+    <script src="scripts/pts.min.js"></script>
+    <script src="scripts/main.js"></script>
+    <script src="scripts/canvas.js"></script>
 
-    <link rel="stylesheet" href="public/main.css">
-    <link rel="stylesheet" href="libraries/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
-    <!-- <link rel="stylesheet" src="libraries/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <link rel="stylesheet" href="font-awesome.min.css"> -->
   </head>
@@ -28,10 +26,10 @@
     </nav>
 
     <div id="Home" class="home-body">
-      <figure class="masthead">
-        <img src="img/codecode.jpg" alt="">            
-        <!-- <canvas id="canvas" width="714" height="1734" style="width: 357px; height: 867px;"></canvas> -->
-      </figure>   
+      <figure id="pt" class="canvas"></figure>
+      <!-- <figure class="masthead"> -->
+        <!-- <img src="img/codecode.jpg" alt="">-->
+      <!-- </figure>    -->
       <div class="header-content">
         <h1>
           <strong>Krystian Szorc</strong>
