--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Krystian's Portfolio</title>
+    <title>Krystian Szorc's Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name ="description" content="A portfoilio of Krystian Szorc's software projects and other related experiences."/>
+    <link rel="shortcut icon" href="img/k-icon-small.png" type="image/x-icon">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-    <!-- <script type="text/javascript" src="path/to/pts.js"></script> -->
     <script src="scripts/pts.min.js"></script>
     <script src="scripts/main.js"></script>
     <script src="scripts/canvas.js"></script>
-
+    <script src="scripts/particles.js"></script>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,7 +27,10 @@
     </nav>
 
     <div id="Home" class="home-body">
-      <figure id="pt" class="canvas"></figure>
+      <figure id="pt" class="canvas">
+
+        <div id="particles-js"></div>
+      </figure>
       <!-- <figure class="masthead"> -->
         <!-- <img src="img/codecode.jpg" alt="">-->
       <!-- </figure>    -->
