--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </ul>
       </div> 
     </div>
-    <nav class="">
+    <nav class="navbar-top">
       <div class="navbar--mobile">
         <i class="navbar-brand fa fa-bars" data-js="navbar-mobile"></i>
       </div>
@@ -111,8 +111,6 @@
                 <img src="img/shipbob-home.jpg">
               </figure>
             </div>
-          </div>
-          <div class="row">
             <div class="portfolio-item">
               <figure>
                 <img src="img/geneca-home.png">
