--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <div class="header-content">
         <h1>
           <strong>
-            <!-- Krystian Szorc -->
+            Krystian Szorc
           </strong>
         </h1>
         <h1>
-          <!-- Software Engineer -->
+          Software Engineer
         </h1>
         <ul class="social">
           <li class="social-icons">
@@ -210,7 +210,7 @@
         <img class="modal__image-hidden" data-img="Hyatt" src="img/WorldOfHyattLoyaltyProgram.png"/>
         <img class="modal__image-hidden" data-img="ShipBob" src="img/shipbob-home.jpg"/>
         <img class="modal__image-hidden" data-img="Levinson" src="img/levinson-home.jpg"/>
-        <img class="modal__image-hidden" data-img="Geneca" src="img/geneca-home.jpg"/>
+        <img class="modal__image-hidden" data-img="Geneca" src="img/geneca-home.png"/>
         <img class="modal__image-hidden" data-img="CMT" src="img/cmt-home.png"/>
       </figure>
       <div class="title" data-js="modal-title">
