beginning of skill share section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,32 @@
             </p>
           </div>
         </div>
+        <h4 class="skill-title">
+          Skills
+        </h4>
+        <div class="skill-list">
+            <div>
+              JavaScript
+            </div>
+            <div>
+              HTML 5
+            </div>
+            <div>
+              CSS 3
+            </div>
+            <div>
+              C #
+            </div>
+            <div>
+              Java
+            </div>
+            <div>
+              AEM
+            </div>
+            <div>
+              SQL
+            </div>
+        </div>
       </div>
     </section>
 
@@ -88,9 +114,27 @@
         </div>
         <div class="portfolio-display">
           <div class="row">
+              <div class="portfolio-item" id="myBtn" on-click="openModal">
+                  <figure>
+                      <img src="img/grainger-logo1.png"/>
+                      <!-- <img src="img/WorldOfHyattLoyaltyProgram.png"/> -->
+                  </figure>
+                  <div class="preview">
+                    <h3>
+                      W. W. Grainger
+                    </h3>
+                    <span>
+                      HandleBars JS, Java
+                    </span>
+                    <button class="btn learn-more" data-modal="Hyatt">
+                      Learn More
+                    </button>
+                  </div>
+                </div>
             <div class="portfolio-item" id="myBtn" on-click="openModal">
               <figure>
-                  <img src="img/WorldOfHyattLoyaltyProgram.png"/>
+                  <img src="img/hyatt-logo.jpg"/>
+                  <!-- <img src="img/WorldOfHyattLoyaltyProgram.png"/> -->
               </figure>
               <div class="preview">
                 <h3>
@@ -138,7 +182,7 @@
             </div>
             <div class="portfolio-item" id="myBtn" on-click="openModal">
               <figure>
-                  <img src="img/geneca-home.png"/>
+                  <img src="img/geneca-logo.png"/>
               </figure>
               <div class="preview">
                 <h3>
