skill shared icons

--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
           Software Engineer
         </h1>
         <ul class="social">
+          <li class="">
+              <a class="nav-link p-2" href="/assets/resume.pdf" target="_blank" rel="noopener" aria-label="GitHub">
+                See More
+              </a>
+          </li>
           <li class="social-icons">
               <a class="nav-link p-2" href="/assets/resume.pdf" target="_blank" rel="noopener" aria-label="GitHub">
                 <i class="fa fa-file"></i>
@@ -76,6 +81,14 @@
             </p>
           </div>
         </div>
+
+      <div>
+          <i class="product-details fa fa-tachometer"></i>
+          <i class="product-details fa fa-lightbulb-o"></i>
+          <img class="product-details" src="img/responsive-icon.png">
+      </div>
+
+
         <h4 class="skill-title">
           Skills
         </h4>
@@ -258,7 +271,7 @@
         <img class="modal__image-hidden" data-img="CMT" src="img/cmt-home.png"/>
       </figure>
       <div class="title" data-js="modal-title">
-      </div>
+      </div><i class="fa fa-copyright"></i>
       <div class="tag" data-js="modal-tag">
       </div>
       <p class="description" data-js="modal-description"></p>
