clean up modals

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </section>
 
   <!-- The Modal -->
-  <div id="myModal" class="modal">
+  <div data-js="modal" class="modal">
     <!-- Modal content -->
     <div class="modal-content">
       <figure>
