modal close button to icon

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
         <a class="btn" data-js="modal-link">
           Visit Site
         </a>
-        <span id="close" class="close">&times;</span>
+        <i id="close" class="fa fa-times close"></i>
       </div>
     </div>
   </div>
